log_rework/build_2026-03-12_15-30-36/uav_bridge/stderr.log
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp: In member function ‘uint64_t uav_bridge::UavControlNode::nowMicros() const’:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:274:56: error: passing ‘std::__shared_ptr_access<const rclcpp::Clock, __gnu_cxx::_S_atomic, false, false>::element_type’ {aka ‘const rclcpp::Clock’} as ‘this’ argument discards qualifiers [-fpermissive]
  274 |     return static_cast<uint64_t>(this->get_clock()->now().nanoseconds() / 1000);
      |                                  ~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/timer.hpp:27,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:30,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:23:
/opt/ros/humble/include/rclcpp/rclcpp/clock.hpp:87:3: note:   in call to ‘rclcpp::Time rclcpp::Clock::now()’
   87 |   now();
      |   ^~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:23:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp: In lambda function:
/home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:282:5: error: passing ‘const rclcpp::Clock’ as ‘this’ argument discards qualifiers [-fpermissive]
  282 |     RCLCPP_WARN_THROTTLE(this->get_logger(), *this->get_clock(), 2000, "waiting for valid timestamp before %s", context);
      |     ^~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/timer.hpp:27,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:30,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/th1rt3en/DOCO/ws/src/uav_bridge/src/uav_control_node.cpp:23:
/opt/ros/humble/include/rclcpp/rclcpp/clock.hpp:87:3: note:   in call to ‘rclcpp::Time rclcpp::Clock::now()’
   87 |   now();
      |   ^~~
gmake[2]: *** [CMakeFiles/uav_control_node.dir/build.make:76: CMakeFiles/uav_control_node.dir/src/uav_control_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:471: CMakeFiles/uav_control_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
